<resources>
    <string name="app_name">AppsSquare</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="logo_image">Logo Image</string>
    <string name="first_task">First Task</string>
    <string name="apps_square_tasks">Apps Square Tasks</string>
    <string name="second_task">Second Task</string>
    <string name="title_activity_second_task">SecondTask</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="validUserAndPass">Valid UserName and passwod</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="icon_for_navigation_drawer_item">Icon For Navigation Drawer Item</string>

    <!-- String Array for Navigation Drawer Items -->
    <string-array name="navigationItems">
        <item>Home</item>
        <item>Profile</item>
        <item>Contact Us</item>
        <item>About Us</item>
    </string-array>

    <string name="myName">Moustafa Elsaghier</string>
    <string name="myEmail">thedreamereng@gmail.com</string>
    <string name="title_activity_s2222222">s2222222</string>
    <string name="title_activity_map_task">Map</string>
    <string name="fourth_task">Fourth Task</string>
    <string name="third_task">Third Task</string>
    <string name="reset">Reset</string>
    <string name="draw_line">Draw Line</string>
</resources>
